--- a/Lights.css
+++ b/Lights.css
@@ -11,6 +11,12 @@ html, body {
   
     /* This centers our sketch vertically. */
     align-items: center;
+
+        width: 1000px;
+        height: 600px;
+        border: 25px solid #ffffff;
+        box-shadow: 1px 2px 7px rgba(0, 0, 0, 0.4);
+    
   }
 
  /*  .frame {
