--- a/Lights.css
+++ b/Lights.css
@@ -13,18 +13,22 @@
   
   .javascript {
     display: flex;
+    border: 25px solid #ffffff;
+    width:100%;
+    height:100%;
+display: flex;
   }
-  .container{
-    width:30%;
-    height:20%;
+/*   .container{
+    max-width:100%;
+    max-height:100%;
     display:flex;
     justify-content:center;
-    padding: 10%; 
+    padding: 0;
     position: absolute;
     border: 25px solid #ffffff;
     box-shadow: 1px 2px 7px rgba(0, 0, 0, 0.4);
     
-  }
+  } */
 
   /* .borders {
     padding: 10%;
