--- a/Lights.css
+++ b/Lights.css
@@ -8,16 +8,23 @@
     /* This centers our sketch vertically. */
     align-items: center;
     
+    
 
   } 
+    canvas {    
+    border: 25px solid #ffffff;
+    width:100%;
+    height:100%;
+    display: flex;
+    }
   
-  .javascript {
+  /* .javascript {
     display: flex;
     border: 25px solid #ffffff;
     width:100%;
     height:100%;
 display: flex;
-  }
+  } */
 /*   .container{
     max-width:100%;
     max-height:100%;
