--- a/menu.css
+++ b/menu.css
@@ -1,55 +1,7 @@
- html, body {
-    height: 100%;
-    display: flex;
-  
-    /* This centers our sketch horizontally. */
-    justify-content: center;
-  
-    /* This centers our sketch vertically. */
-    align-items: center;
-    
-    
-
-  } 
-    canvas {    
-    border: 25px solid #ffffff;
-    width:100%;
-    height:100%;
-    display: flex;
-    }
-  
-  /* .javascript {
-    display: flex;
-    border: 25px solid #ffffff;
-    width:100%;
-    height:100%;
-display: flex;
-  } */
-/*   .container{
-    max-width:100%;
-    max-height:100%;
-    display:flex;
-    justify-content:center;
-    padding: 0;
-    position: absolute;
-    border: 25px solid #ffffff;
-    box-shadow: 1px 2px 7px rgba(0, 0, 0, 0.4);
-    
-  } */
-
-  /* .borders {
-    padding: 10%;
-    height: 10%;
-    display:flex;
-    position: fixed;
-    border: 25px solid #ffffff;
-    box-shadow: 1px 2px 7px rgba(0, 0, 0, 0.4);
-  } */
- /*  .frame {
-      position: absolute;
-
-  } */
-  
-  /* align-items:center;
+body {
+  background-image: url('Assetination/Paperbackground.jpg');
   border: 25px solid #ffffff;
-  box-shadow: 1px 2px 7px rgba(0, 0, 0, 0.4); */
+    width:100%;
+    height:100%;
+    display: flex;
+}
