--- a/menu.css
+++ b/menu.css
@@ -1,6 +1,53 @@
 body {
   background-image: url('Assetination/Paperbackground.jpg');
 }
+
+.commentsRight {
+  position: absolute;
+  display: flex;
+  margin-top: 20%;
+  margin-left: 70%;
+  flex-direction: column
+}
+
+.boxdrawing{
+  width: 70%;
+}
+
+.catidea{
+  width: 30%;
+}
+
+.kitty{
+  width: 100%;
+  padding-right: 10%;
+}
+
+.sleepy {
+  width: 70%;
+  padding-left: 4%;
+}
+
+
+.commentsLeft {
+  position: absolute;
+  display: flex;
+  margin-top: 85%;
+  margin-left: 10%;
+  flex-direction: column
+}
+
+.play{
+  width: 60%;
+  padding-left: 20%;
+}
+
+.wtf {
+  width: 80%;
+  padding-left: 50%;
+}
+
+
 .thread {
   position: absolute;
   display: flex;
